Created endpoint for reordering columns
